United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6983204 G1: Nightly test nsk/regression/b4958615 failing with +ExplicitInvokesConcurrent
6983204 : G1: Nightly test nsk/regression/b4958615 failing with +ExplicitInvokesConcurrent

Details
Type:
Bug
Submit Date:
2010-09-08
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Relates:
Relates:
Relates:

Sub Tasks

Description
The nightly test

nsk/regression/b4958615

has been failing from 9/1/2010 on multiple platforms. Nightly search has it failing on 9/1 and 9/4. Here are the links to some of the failing tests:

http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-09-01/G1_GC_Baseline/vm/solaris-i586/client/mixed/solaris-i586_vm_client_mixed_nsk.quick-regression.testlist/analysis.html

http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-09-01/G1_GC_Baseline/vm/solaris-sparcv9/server/mixed/solaris-sparcv9_vm_server_mixed_nsk.quick-regression.testlist/analysis.html

http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-09-04/G1_GC_Baseline/vm/solaris-sparcv9/server/mixed/solaris-sparcv9_vm_server_mixed_nsk.quick-regression.testlist/analysis.html

The Java source of the regression test and the rerun script are attached.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/fd1d227ef1b9
                                     
2010-12-25
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/fd1d227ef1b9
                                     
2010-12-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/fd1d227ef1b9
                                     
2010-12-02
EVALUATION

Missing reference processor instance from marking oop closure resulting in calls to ReferenceProcessor::discover_reference() to be skipped.

Also we need to treat the discovered reference lists as roots during incremental pauses so that if a reference on one of these lists is copied during a pause then we update the discovered ref list with that object's new location.
                                     
2010-10-07



Hardware and Software, Engineered to Work Together