6983204: G1: Nightly test nsk/regression/b4958615 failing with +ExplicitGCInvokesConcurrent

Enable reference discovery during concurrent marking by setting the reference processor field of the concurrent marking closure. Keep reference objects on the discovered reference lists alive during incremental evacuation pauses until they are processed at the end of concurrent marking.

Reviewed-by: ysr, tonyp